src/styles/global.css
/*

https://starlight.astro.build/guides/css-and-tailwind/#color-theme-editor

/* Dark mode colors. */
:root {
    --sl-color-accent-low: #f0bb78ff;
	--sl-color-accent: #f5ecd5;
	--sl-color-accent-high: #626f47ff;
	--sl-color-white: #ffffff;
	--sl-color-gray-1: #eeedf1;
	--sl-color-gray-2: #c9c7cc;
	--sl-color-gray-3: #a4a2ab;
	--sl-color-gray-4: #59575f;
	--sl-color-gray-5: #39373e;
	--sl-color-gray-6: #27262c;
	--sl-color-black: #18181b;
	--sl-content-width: 70rem;
	--sl-breakpoint-lg: 100rem;
}
/* Light mode colors. */
:root[data-theme='light'] {
    --sl-color-accent-low: #d3a569d4;
	--sl-color-accent: #626f47ff;
	--sl-color-accent-high: #A4B465;
	--sl-color-white: #18181b;
	--sl-color-gray-1: #27262c;
	--sl-color-gray-2: #39373e;
	--sl-color-gray-3: #59575f;
	--sl-color-gray-4: #8c8a93;
	--sl-color-gray-5: #c2c1c6;
	--sl-color-gray-6: #eeedf1;
	--sl-color-gray-7: #f6f6f8;
	--sl-color-black: #ffffff;
	--sl-content-width: 70rem;
	--sl-breakpoint-lg: 100rem;
}

/*

force the splash screens to be full width without any padding to allow for full width background images/colors

content blocks in splash pages should use 'splash sections' like <BoxSection> or the wrapper <SplashContent>
*/
html:not([data-has-sidebar]) {
  --original-sl-content-width: var(--sl-content-width);
  --sl-content-width: 100% !important;
}
html:not([data-has-sidebar]) .content-panel {
  padding: 0;
}
/* -- */





.splash-content {
  padding: 1rem 1.5rem;
  margin-inline: auto;
  max-width: 80rem;
  width: 100%;
  box-sizing: border-box;
  text-align: center;
}




.box-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  padding: 2rem 1.5rem;
}

@media (min-width: 768px) {
  .box-section {
    padding: 4rem;
  }
}


[data-theme='light'] .box-section {
  background: var(--sl-color-gray-6);
}
[data-theme='dark'] .box-section {
  background: var(--sl-color-gray-6);
}

.box-section-row {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  align-items: flex-start;
}

@media (min-width: 1024px) {
  .box-section-row {
  flex-direction: row;
  gap: 5rem;
  }
}

.box-section-box {
  display: flex;
  gap: 0.5rem;
  flex-direction: column;
  align-items: center;
  justify-content: top;
  margin:0!important;

  text-align: center;
}

.box-section-outro {
  padding-top: 2rem;
}
.box-section-intro {
  padding-bottom: 2rem;
}

.box-title {
  font-size: 2rem;
  font-weight: 700;
  margin: 0!important;

}
.box-subtitle {
  font-size: 1.7rem;
  font-weight: 400;
  margin: 0!important;
}

.image-container {
  display: flex;
  justify-content: center; /* Centers horizontally */
  align-items: center; /* Centers vertically */
  width: 100%; /* Or desired width */
  height: 300px; /* Or desired height */
  /* border: 1px solid #ccc; */ /* Optional: to visualize container */
}

